<resources>
    <string name="app_name">IV BLANC</string>
    <string name="join">회원가입</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="passwordCheck">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="phoneNumber">휴대전화번호</string>
    <string name="birthday">생년월일</string>
    <string name="gender">성별</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <!-- 에러 메세지 -->
    <string name="emailErrorMessage">올바르지 않은 이메일입니다.</string>
    <string name="nameErrorMessage">올바르지 않은 이름입니다.</string>
    <string name="passwordErrorMessage">올바르지 않은 비밀번호입니다.</string>
    <string name="passwordCheckErrorMessage">입력한 비밀번호와 다릅니다.</string>
    <string name="phoneNumberErrorMessage">올바르지 않은 휴대전화번호입니다.</string>
    <string name="birthdayErrorMessage">올바르지 않은 생년월일입니다.</string>
    <string name="emailNotCheckedErrorMessage">이메일 중복 검사를 눌러주세요.</string>
    <string name="genderNotCheckedErrorMessage">성별을 선택해주세요.</string>
    <string name="networkErrorMessage">네트워크 연결이 불안정합니다.</string>
    <string name="unknownErrorMessage">알 수 없는 에러입니다.</string>
    <string name="noClothesErrorMessage">존재하지 않는 옷에 대한 요청입니다.</string>
    <string name="checkDuplication">중복체크</string>
    <string name="invalidClothesErrorMessage">존재하지 않는 옷입니다.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">로그인</string>
    <string name="autoLogin">자동 로그인</string>
    <string name="favoriteClothes">즐겨찾는 옷</string>
    <string name="recentlyAddedClothes">최근에 추가한 옷</string>
    <string name="favoriteStyle">즐겨찾는 룩</string>
    <string name="recentlyAddedStyle">최근에 추가한 룩</string>
    <string name="photo">사진</string>
    <string name="camera">카메라</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="category">종류</string>
    <string name="season">계절</string>
    <string name="next">다음</string>
    <string name="color">색상</string>
    <string name="representativeColor">대표 색</string>
    <string name="before">이전</string>
    <string name="size">사이즈</string>
    <string name="material">소재</string>
    <string name="upload">업로드</string>
    <string name="total">전체</string>
    <string name="top">상의</string>
    <string name="tShirt">티셔츠</string>
    <string name="shirt">셔츠</string>
    <string name="hood">후드</string>
    <string name="sweatShirt">맨투맨</string>
    <string name="blouse">블라우스</string>
    <string name="cropTop">크롭탑</string>
    <string name="dress">드레스</string>
    <string name="etc">기타</string>
    <string name="bottom">하의</string>
    <string name="denimPants">청바지</string>
    <string name="cottonPants">면바지</string>
    <string name="shortPants">반바지</string>
    <string name="suitPants">정장 바지</string>
    <string name="sportPants">운동복</string>
    <string name="skirt">스커트</string>
    <string name="leggings">레깅스</string>
    <string name="outer">아우터</string>
    <string name="coat">코트</string>
    <string name="jacket">자켓</string>
    <string name="padding">패딩</string>
    <string name="vest">조끼</string>
    <string name="cardigan">가디건</string>
    <string name="shoes">신발</string>
    <string name="sneakers">스니커즈</string>
    <string name="sportsShoes">운동화</string>
    <string name="loafers">로퍼/플랫</string>
    <string name="boots">부츠</string>
    <string name="slippers">슬리퍼/샌들</string>
    <string name="heels">힐</string>
    <string name="bag">가방</string>
    <string name="backpack">백팩</string>
    <string name="crossBag">크로스백</string>
    <string name="shoulderBag">숄더백</string>
    <string name="handbag">핸드백</string>
    <string name="hat">모자</string>
    <string name="cotton">면</string>
    <string name="linen">린넨</string>
    <string name="polyester">폴리에스테르</string>
    <string name="wool">니트/울</string>
    <string name="fur">퍼</string>
    <string name="tweed">트위드</string>
    <string name="nylon">나일론</string>
    <string name="denim">데님</string>
    <string name="leather">가죽</string>
    <string name="suede">스웨이드</string>
    <string name="velvet">벨벳</string>
    <string name="chiffon">쉬폰</string>
    <string name="silk">실크</string>
    <string name="cordeDuRoi">코듀로이</string>
    <string name="metalic">메탈릭</string>
    <string name="calendar">캘린더</string>
    <string name="map">지도</string>
    <string name="empty" />
    <string name="spring">봄</string>
    <string name="summer">여름</string>
    <string name="fall">가을</string>
    <string name="winter">겨울</string>
    <string name="loadingComment">잠시만 기다려 주세요.</string>
    <string name="clothes">옷</string>
    <string name="style">스타일</string>
    <string name="history">히스토리</string>
    <string name="friend">친구</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="closetEn">Closet</string>
    <string name="pickEn">Pick</string>
    <string name="shareEn">Share</string>
    <string name="historyEn">History</string>
</resources>