<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".src.process.ColorFragment"
    android:padding="@dimen/defaultPadding">

    <TextView
        android:id="@+id/textView_colorF"
        style="@style/Text.Base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/representativeColor"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_colorF_represent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_colorF_represent" />

    <ImageView
        android:id="@+id/imageView_colorF_represent"
        android:layout_width="@dimen/colorPickSize"
        android:layout_height="@dimen/colorPickSize"
        android:layout_marginStart="@dimen/defaultMargin"
        app:layout_constraintStart_toEndOf="@+id/textView_colorF"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_colorF"
        android:layout_width="379dp"
        android:layout_height="243dp"
        android:layout_marginTop="@dimen/defaultPadding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_colorF" />

    <Button
        android:id="@+id/button_colorF_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_colorF_before"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/before"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_colorF_next" />


</androidx.constraintlayout.widget.ConstraintLayout>