<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".src.process.MaterialFragment"
    android:padding="@dimen/defaultPadding">

    <TextView
        android:id="@+id/textView_materialF"
        style="@style/Text.Base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_materialF_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_materialF"
        app:layout_constraintStart_toEndOf="@id/textView_materialF"
        app:layout_constraintTop_toTopOf="@id/textView_materialF"
        tools:text="면" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_materialF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultPadding"
        app:layout_constraintBottom_toTopOf="@+id/button_materialF_before"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_materialF" />

    <Button
        android:id="@+id/button_materialF_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_materialF_before"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/before"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_materialF_next" />

</androidx.constraintlayout.widget.ConstraintLayout>