<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/defaultPadding"
    android:paddingEnd="@dimen/defaultPadding"
    tools:context=".src.login.LoginFragment">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/newlogo2"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512"
        app:srcCompat="@drawable/newlogo2"
        tools:srcCompat="@drawable/newlogo2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.49" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_loginF_email"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:hint="@string/email"
        app:boxStrokeColor="@color/ivblanc_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_loginF_email"
            style="@style/TextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_loginF_password"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        app:boxStrokeColor="@color/ivblanc_purple"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_loginF_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_loginF_password"
            style="@style/TextInputStyle"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox_loginF_autoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autoLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_loginF_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_loginF_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/ivblanc_pink"
        android:insetBottom="0dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_loginF_autoLogin"
        app:rippleColor="@color/gray_200" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_loginF_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ivblanc_newpink"
        android:insetBottom="0dp"
        android:text="@string/join"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_loginF_login"
        app:rippleColor="@color/gray_200" />

    <TextView
        android:id="@+id/textView_loginF_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="아이디 비밀번호 찾기"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_loginF_join" />

    <ImageView
        android:id="@+id/imageView_loginF_naver"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/naver"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/imageView_loginF_google"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView_loginF_kakao"
        app:layout_constraintTop_toBottomOf="@+id/textView_loginF_forgot" />

    <ImageView
        android:id="@+id/imageView_loginF_kakao"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/kakao"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/imageView_loginF_naver"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_loginF_naver" />

    <ImageView
        android:id="@+id/imageView_loginF_google"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/circle"
        android:src="@drawable/google"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView_loginF_naver"
        app:layout_constraintTop_toTopOf="@+id/imageView_loginF_naver" />

    <ProgressBar
        android:id="@+id/progressBar_loginF_loading"
        android:layout_width="@dimen/loadingProgressSize"
        android:layout_height="@dimen/loadingProgressSize"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>