<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".src.process.CategoryFragment"
    android:padding="@dimen/defaultPadding">

    <TextView
        android:id="@+id/textView_categoryF"
        style="@style/Text.Base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_categoryF_large"
        style="@style/TextInputLayoutStyle.dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_categoryF">

        <AutoCompleteTextView
            android:id="@+id/autoComplete_categoryF_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_categoryF_small"
        style="@style/TextInputLayoutStyle.dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout_categoryF_large"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout_categoryF_large"
        android:layout_marginStart="@dimen/defaultMargin">

        <AutoCompleteTextView
            android:id="@+id/autoComplete_categoryF_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_categoryF_season"
        style="@style/Text.Base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:layout_marginTop="@dimen/defaultPadding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_categoryF_small" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_categoryF_size"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_categoryF_season"
        app:boxStrokeColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_categoryF_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_categoryF_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>