<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.clothesDetail.ClothesDetailActivity">

    <ImageView
        android:id="@+id/imageView_clothesDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"/>

    <ImageView
        android:id="@+id/imageView_clothesDetail_close"
        android:layout_width="@dimen/defaultIconSize"
        android:layout_height="@dimen/defaultIconSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/defaultMargin"
        android:layout_marginTop="@dimen/defaultMargin"
        android:background="@drawable/ic_close"/>

    <ImageView
        android:id="@+id/imageView_clothesDetail_favorite"
        android:layout_width="@dimen/defaultIconSize"
        android:layout_height="@dimen/defaultIconSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/defaultMargin"
        android:layout_marginTop="@dimen/defaultMargin"
        android:background="@drawable/ic_heart_out_line"/>

    <ImageView
        android:id="@+id/imageView_clothesDetail_style"
        android:layout_width="@dimen/defaultIconSize"
        android:layout_height="@dimen/defaultIconSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageView_clothesDetail"
        android:layout_marginEnd="@dimen/defaultMargin"
        android:layout_marginBottom="@dimen/defaultMargin"
        android:background="@drawable/ic_hanger"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_clothesDetail"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/defaultPadding"
        android:layout_marginTop="@dimen/defaultPadding">

        <TextView
            android:id="@+id/textView_clothesDetail_categoryLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="상의"/>
        <TextView
            android:id="@+id/textView_clothesDetail_categorySmall"
            style="@style/Text.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="아우터" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/defaultPadding"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/representativeColor"/>
        <ImageView
            android:id="@+id/imageView_clothesDetail_color"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/circle"
            android:src="@drawable/circle"
            tools:backgroundTint="@color/red_300"
            android:layout_marginTop="@dimen/smallMargin"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/defaultPadding"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material"/>
        <TextView
            android:id="@+id/textView_clothesDetail_material"
            style="@style/Text.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="가죽"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/defaultPadding"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"/>
        <TextView
            android:id="@+id/textView_clothesDetail_size"
            style="@style/Text.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="100"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/defaultPadding"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/season"/>
        <TextView
            android:id="@+id/textView_clothesDetail_season"
            style="@style/Text.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="겨울"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/imageView_clothesDetail"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/defaultPadding"
        android:layout_marginEnd="@dimen/defaultPadding"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_like"/>
        <TextView
            android:id="@+id/textView_clothesDetail_like"
            style="@style/Text.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="15"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultPadding"/>
        <ImageView
            android:layout_width="@dimen/smallIconSize"
            android:layout_height="@dimen/smallIconSize"
            android:background="@drawable/ic_dislike"/>
        <TextView
            android:id="@+id/textView_clothesDetail_dislike"
            style="@style/Text.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            tools:text="5"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>